// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tile matches snapshot when does not have a title 1`] = `
.emotion-0 {
  background: #fff;
  box-shadow: 0 2px 10px rgba(135,155,166,0.1);
  padding: 24px;
}

@media only screen and (max-width:768px) {
  .emotion-0 {
    padding: 16px;
  }
}

<div
  className="emotion-0"
>
  Tile content
</div>
`;

exports[`Tile matches snapshot when does not have any padding 1`] = `
.emotion-0 {
  background: #fff;
  box-shadow: 0 2px 10px rgba(135,155,166,0.1);
  padding: 24px;
  padding: 0px !important;
}

@media only screen and (max-width:768px) {
  .emotion-0 {
    padding: 16px;
  }
}

<div
  className="emotion-0"
>
  Tile content
</div>
`;

exports[`Tile matches snapshot when has a title 1`] = `
.emotion-1 {
  background: #fff;
  box-shadow: 0 2px 10px rgba(135,155,166,0.1);
  padding: 24px;
}

@media only screen and (max-width:768px) {
  .emotion-1 {
    padding: 16px;
  }
}

.emotion-0 {
  color: #879ba6;
  text-transform: uppercase;
  font-weight: 500;
  font-size: 0.9em;
  margin-bottom: 16px;
}

@media only screen and (max-width:768px) {
  .emotion-0 {
    margin-bottom: 8px;
  }
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  >
    Title
  </div>
  Tile content
</div>
`;
